// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Tenant {
  id        String   @id @default(uuid())
  name      String
  createdAt DateTime @default(now())

  users             User[]
  roles             Role[]
  pipelineTemplates PipelineTemplate[]
  pipelineStages    PipelineStage[]
  candidates        Candidate[]
  evaluations       Evaluation[]
  decisions         Decision[]
  slaAlerts         SlaAlert[]
  jobs              Job[]
  interviews        Interview[]
  auditLogs         AuditLog[]
  notifications     Notification[]
  emailLogs         EmailLog[]
}

model Role {
  id       String @id @default(uuid())
  tenantId String
  name     String // e.g., 'ADMIN', 'RECRUITER', 'INTERVIEWER'

  tenant Tenant @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  users  User[]

  @@unique([tenantId, name])
}

model User {
  id           String   @id @default(uuid())
  tenantId     String
  roleId       String
  email        String
  passwordHash String?
  googleId     String?
  firstName    String   @default("")
  lastName     String   @default("")
  language     String   @default("en")
  createdAt    DateTime @default(now())

  tenant       Tenant       @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  role         Role         @relation(fields: [roleId], references: [id], onDelete: Restrict)
  evaluations  Evaluation[]
  interviewPanels InterviewPanelMember[]
  interviews   Interview[] @relation("InterviewLead")
  auditLogs    AuditLog[]
  notifications Notification[]
  managedJobs  Job[]        @relation("HiringManager")
  assignedCandidates Candidate[] @relation("AssignedRecruiter")
  emailLogs    EmailLog[]

  @@unique([tenantId, email])
}

model Job {
  id                 String   @id @default(uuid())
  tenantId           String
  title              String
  department         String   @default("")
  description        String   @default("")
  hiringManagerId    String?
  pipelineTemplateId String?
  requiredSkills     String[] @default([])
  preferredSkills    String[] @default([])
  requiredExperience Float    @default(0)
  scoringWeights     Json?    @default("{}")
  status             String   @default("OPEN") // OPEN, CLOSED, ARCHIVED
  createdAt          DateTime @default(now())
  updatedAt          DateTime @updatedAt

  tenant             Tenant            @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  hiringManager      User?             @relation("HiringManager", fields: [hiringManagerId], references: [id], onDelete: SetNull)
  pipelineTemplate   PipelineTemplate? @relation(fields: [pipelineTemplateId], references: [id], onDelete: SetNull)
  candidates         Candidate[]
  evaluations        Evaluation[]

  @@index([tenantId, status])
}

model PipelineTemplate {
  id        String   @id @default(uuid())
  tenantId  String
  name      String
  roleType  String
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())

  tenant     Tenant          @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  stages     PipelineStage[]
  candidates Candidate[]
  jobs       Job[]

  @@unique([tenantId, name])
}

model PipelineStage {
  id                 String   @id @default(uuid())
  tenantId           String
  pipelineTemplateId String
  name               String
  orderIndex         Int
  slaHours           Int      @default(48) // Default 48h SLA for bottleneck
  stageType          String   @default("INTERVIEW") // STATIC, INTERVIEW, ASSESSMENT, AUTOMATED

  tenant             Tenant           @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  pipelineTemplate   PipelineTemplate @relation(fields: [pipelineTemplateId], references: [id], onDelete: Cascade)
  candidates         Candidate[]
  evaluations        Evaluation[]
  interviews         Interview[]

  @@unique([pipelineTemplateId, orderIndex])
}

model Candidate {
  id             String   @id @default(uuid())
  tenantId       String
  pipelineId     String
  jobId          String?
  currentStageId String?
  firstName      String
  lastName       String
  email          String
  phone          String?
  summary        String?   @default("")
  resumeUrl      String?
  skills         String[]  @default([])
  yearsOfExperience Float    @default(0)
  education      Json?     @default("[]")
  projects       Json?     @default("[]")
  status         String    @default("ACTIVE") // ACTIVE, REJECTED, HIRED, ON_HOLD
  score          Int       @default(0)
  stageEnteredAt DateTime  @default(now())
  stageHistory   Json?     @default("[]")
  createdAt      DateTime  @default(now())
  updatedAt      DateTime @default(now()) @updatedAt
  assignedRecruiterId String?
  
  tenant       Tenant           @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  pipeline     PipelineTemplate @relation(fields: [pipelineId], references: [id], onDelete: Restrict)
  job          Job?             @relation(fields: [jobId], references: [id], onDelete: SetNull)
  currentStage PipelineStage?   @relation(fields: [currentStageId], references: [id], onDelete: SetNull)
  assignedRecruiter User?      @relation("AssignedRecruiter", fields: [assignedRecruiterId], references: [id], onDelete: SetNull)
  evaluations  Evaluation[]
  decisions    Decision[]
  slaAlerts    SlaAlert[]
  interviews   Interview[]
  emailLogs    EmailLog[]

  @@index([tenantId, pipelineId, currentStageId])
  @@index([tenantId, status])
  @@index([tenantId, assignedRecruiterId])
}

model Evaluation {
  id                     String   @id @default(uuid())
  tenantId               String
  candidateId            String
  jobId                  String   // Evaluation is primarily per Job
  stageId                String?  // Optional: can evaluate at specific stage
  interviewerId          String?  // Optional for AI evaluations
  skillMatchScore        Int
  experienceScore        Int
  projectRelevanceScore  Int
  overallScore           Int
  strengths              String[]
  weaknesses             String[]
  missingSkills          String[]
  recommendation         String   // HIGHLY_RECOMMENDED, RECOMMENDED, CONSIDER, NOT_RECOMMENDED
  evaluatedAt            DateTime @default(now())

  tenant      Tenant        @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  candidate   Candidate     @relation(fields: [candidateId], references: [id], onDelete: Cascade)
  job         Job           @relation(fields: [jobId], references: [id], onDelete: Cascade)
  stage       PipelineStage? @relation(fields: [stageId], references: [id], onDelete: SetNull)
  interviewer User?         @relation(fields: [interviewerId], references: [id], onDelete: Restrict)

  @@unique([candidateId, jobId])
}

model Decision {
  id            String   @id @default(uuid())
  tenantId      String
  candidateId   String
  finalDecision String   // 'HIRE', 'NO_HIRE'
  hasConflict   Boolean  @default(false)
  decisionNotes String?
  createdAt     DateTime @default(now())

  tenant    Tenant    @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  candidate Candidate @relation(fields: [candidateId], references: [id], onDelete: Cascade)
}

model SlaAlert {
  id           String   @id @default(uuid())
  tenantId     String
  candidateId  String
  stageId      String
  alertMessage String
  isResolved   Boolean  @default(false)
  createdAt    DateTime @default(now())

  tenant    Tenant    @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  candidate Candidate @relation(fields: [candidateId], references: [id], onDelete: Cascade)
}

model Interview {
  id             String   @id @default(uuid())
  tenantId       String
  candidateId    String
  stageId        String
  title          String   @default("Technical Interview")
  type           String   @default("VIDEO") // PHONE, VIDEO, ONSITE, TECHNICAL
  status         String   @default("SCHEDULED") // SCHEDULED, COMPLETED, CANCELLED, RESCHEDULED
  scheduledAt    DateTime
  duration       Int      @default(60) // in minutes
  videoLink      String?
  notes          String?
  feedback       Json?     // Stores: rating, recommendation, feedback text, rubric responses
  feedbackStatus String   @default("PENDING") // PENDING, SUBMITTED
  createdAt      DateTime @default(now())
  updatedAt      DateTime @default(now()) @updatedAt

  tenant      Tenant        @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  candidate   Candidate     @relation(fields: [candidateId], references: [id], onDelete: Cascade)
  stage       PipelineStage? @relation(fields: [stageId], references: [id], onDelete: SetNull)
  interviewerId String?
  interviewer   User?         @relation("InterviewLead", fields: [interviewerId], references: [id], onDelete: SetNull)
  panel       InterviewPanelMember[]

  @@index([tenantId, candidateId])
}

model InterviewPanelMember {
  id           String    @id @default(uuid())
  interviewId  String
  userId       String
  role         String    @default("LEAD") // LEAD, SHADOW, OBSERVER
  
  interview    Interview @relation(fields: [interviewId], references: [id], onDelete: Cascade)
  user         User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([interviewId])
  @@index([userId])
}

model AuditLog {
  id         String   @id @default(uuid())
  tenantId   String
  userId     String?
  action     String   // CREATE, UPDATE, DELETE, VIEW, EXPORT, LOGIN
  resource   String   // Candidate, Job, Evaluation
  resourceId String?
  changes    Json?    // Stores before/after values
  ipAddress  String?
  userAgent  String?
  createdAt  DateTime @default(now())

  tenant Tenant @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  user   User?  @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([tenantId, resource, resourceId])
  @@index([tenantId, createdAt])
}

model Notification {
  id        String   @id @default(uuid())
  tenantId  String
  userId    String
  type      String   // 'SLA_VIOLATION', 'INTERVIEW_SCHEDULED', 'FEEDBACK_REQUIRED', 'DECISION_MADE'
  title     String
  message   String
  isRead    Boolean  @default(false)
  createdAt DateTime @default(now())

  tenant Tenant @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([tenantId, userId, isRead])
}

model EmailLog {
  id          String   @id @default(uuid())
  tenantId    String
  candidateId String?
  userId      String?
  to          String
  subject     String
  body        String
  status      String   @default("PENDING") // PENDING, SENT, FAILED, BOUNCED
  errorMessage String?
  openedAt    DateTime?
  clickedAt   DateTime?
  sentAt      DateTime?
  createdAt   DateTime @default(now())

  tenant    Tenant     @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  candidate Candidate? @relation(fields: [candidateId], references: [id], onDelete: SetNull)
  user      User?      @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([tenantId, candidateId])
  @@index([tenantId, createdAt])
}
